Work on local peak detection notebooks

--- a/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
+++ b/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
@@ -3,7 +3,77 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Peak finding"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data for this notebook \n",
+    "\n",
+    "We will be manipulating Hubble eXtreme Deep Field (XDF) data, which was collected using the Advanced Camera for Surveys (ACS) on Hubble between 2002 and 2012. The image we use here is the result of 1.8 million seconds (500 hours!) of exposure time, and includes some of the faintest and most distant galaxies that had ever been observed. \n",
+    "\n",
+    "*The methods demonstrated here are also available in the [`photutils.detection` documentation](http://photutils.readthedocs.io/en/stable/detection.html).*\n",
+    "\n",
+    "*The original authors of this notebook were Lauren Chambers, Erik Tollerud and Tom Wilson.*\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.io import fits\n",
+    "import astropy.units as u\n",
+    "from astropy.nddata import CCDData\n",
+    "from astropy.stats import sigma_clipped_stats, SigmaClip\n",
+    "from astropy.visualization import ImageNormalize, LogStretch\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.ticker import LogLocator\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "from photutils.background import Background2D, MeanBackground\n",
+    "from photutils.centroids import centroid_2dg\n",
+    "from photutils.detection import find_peaks, DAOStarFinder, IRAFStarFinder\n",
+    "\n",
+    "# Show plots in the notebook\n",
+    "%matplotlib inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "xdf_image = CCDData.read('hlsp_xdf_hst_acswfc-60mas_hudf_f435w_v1_sci.fits')\n",
+    "# Define the mask\n",
+    "mask = xdf_image.data == 0\n",
+    "xdf_image.mask = mask"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean, median, std = sigma_clipped_stats(xdf_image.data, sigma=3.0, maxiters=5, mask=xdf_image.mask)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.style.use('../photutils_notebook_style.mplstyle')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -31,16 +101,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils.detection import find_peaks\n",
-    "from photutils.centroids import centroid_2dg"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "sources_findpeaks = find_peaks(xdf_image.data, mask=xdf_image.mask,\n",
     "                               threshold=20. * std, box_size=29,\n",
     "                               centroid_func=centroid_2dg)\n",
@@ -57,15 +117,28 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "# Set up the normalization and colormap\n",
+    "norm_image = ImageNormalize(vmin=1e-4, vmax=5e-2, stretch=LogStretch(), clip=False)\n",
+    "cmap = plt.get_cmap('viridis')\n",
+    "cmap.set_bad('white') # Show masked data as white\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image.data),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "ax1.scatter(sources_findpeaks['x_peak'], sources_findpeaks['y_peak'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
     "\n",
     "# Define the colorbar\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "def format_colorbar(bar):\n",
+    "    # Add minor tickmarks\n",
+    "    bar.ax.yaxis.set_minor_locator(LogLocator(subs=range(1, 10)))\n",
+    "\n",
+    "    # Force the labels to be displayed as powers of ten and only at exact powers of ten\n",
+    "    bar.ax.set_yticks([1e-4, 1e-3, 1e-2])\n",
+    "    labels = [f'$10^{{{pow:.0f}}}$' for pow in np.log10(bar.ax.get_yticks())]\n",
+    "    bar.ax.set_yticklabels(labels)\n",
+    "\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
@@ -97,7 +170,7 @@
     "for ax, src in zip(axs.ravel(), srcs):\n",
     "    slc = (slice(int(src['y_peak'] - cutout_size), int(src['y_peak'] + cutout_size)),\n",
     "           slice(int(src['x_peak'] - cutout_size), int(src['x_peak'] + cutout_size)))\n",
-    "    ax.imshow(xdf_image_clipped[slc], norm=norm_image)\n",
+    "    ax.imshow(xdf_image[slc], norm=norm_image)\n",
     "    src_id = np.where((sources_findpeaks['x_peak'] == src['x_peak']) &\n",
     "                      (sources_findpeaks['y_peak'] == src['y_peak']))[0][0]\n",
     "    ax.text(2, 2, str(src_id), color='w', va='top')\n",
@@ -113,7 +186,23 @@
     "\n",
     "Let's compare how each of these different strategies did.\n",
     "\n",
-    "First, how many sources did each method find?"
+    "First, we repeat our earlier detection using [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) and [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder).\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "daofind = DAOStarFinder(fwhm=5.0, threshold=20. * std)\n",
+    "sources_dao = daofind(np.ma.masked_where(xdf_image.mask, xdf_image))\n",
+    "\n",
+    "iraffind_match = IRAFStarFinder(fwhm=5.0, threshold=20. * std,\n",
+    "                                sharplo=0.2, sharphi=1.0,\n",
+    "                                roundlo=-1.0, roundhi=1.0,\n",
+    "                                minsep_fwhm=0.0)\n",
+    "sources_iraf_match = iraffind_match(np.ma.masked_where(xdf_image.mask, xdf_image))"
    ]
   },
   {
@@ -184,7 +273,7 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped), norm=norm_image)\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image), norm=norm_image)\n",
     "ax1.scatter([x for x, y in list(dao_findpeaks_match)], [y for x, y in list(dao_findpeaks_match)],\n",
     "            s=30, marker='s', lw=1,  facecolor='None', edgecolor='#EE7733',\n",
     "            label='Found by DAO and find_peaks')\n",
@@ -223,312 +312,6 @@
     "If none of the algorithms we've reviewed above do exactly what you need, `photutils` also provides infrastructure for you to generate and use your own source detection algorithm: the `StarFinderBase` object can be inherited and used to develop new star-finding classes. Take a look at the [documentation](https://photutils.readthedocs.io/en/latest/api/photutils.detection.StarFinderBase.html#photutils.detection.StarFinderBase) for more information.\n",
     "\n",
     "If you do go that route, remember that `photutils` is open-developed; you would be very welcome to [open a pull request](https://github.com/astropy/photutils/blob/master/CONTRIBUTING.rst) and incorporate your new star finder into the `photutils` source code &ndash; for everyone to use!"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "\n",
-    "## Image Segmentation"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Beyond traditional source detection methods, an additional option for identifying sources in image data is a process called **image segmentation**. This method identifies and labels contiguous (connected) objects within an image. \n",
-    "\n",
-    "You might have noticed that, in the previous source detection algorithms, large and extended sources are often incorrectly identified as more than one source. Segmentation would label all the pixels within a large galaxy as belonging to the same object, and would allow the user to then measure the photometry, centroid, and morphology of the entire object at once.\n",
-    "\n",
-    "#### Creating a `SegmentationImage`\n",
-    "\n",
-    "In `photutils`, image segmentation maps are created using the threshold method in the `detect_sources()` function. This method identifies all of the objects in the data that have signals above a determined **`threshold`** (usually defined as a multiple of the standard deviation) and that have more than a defined number of adjoining pixels, **`npixels`**. The data can also optionally be smoothed using a kernel, **`filter_kernel`**, before applying the threshold cut.\n",
-    "\n",
-    "The `detect_sources()` function returns a `SegmentationImage` object: an array in which each object is labeled with an integer. As a simple example, a segmentation map containing two distinct sources might look like this:\n",
-    "\n",
-    "```\n",
-    "0 0 0 0 0 0 0 0 0 0\n",
-    "0 1 1 0 0 0 0 0 0 0\n",
-    "1 1 1 1 1 0 0 0 2 0\n",
-    "1 1 1 1 0 0 0 2 2 2\n",
-    "1 1 1 0 0 0 2 2 2 2\n",
-    "1 1 1 1 0 0 0 2 2 0\n",
-    "1 1 0 0 0 0 2 2 0 0\n",
-    "0 1 0 0 0 0 2 0 0 0\n",
-    "0 0 0 0 0 0 0 0 0 0\n",
-    "```\n",
-    "where all of the pixels labeled `1` belong to the first source, all those labeled `2` belong to the second, and all null pixels are designated to be background.\n",
-    "\n",
-    "Let's see what the segmentation map for our XDF data will look like."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from photutils import detect_sources\n",
-    "from photutils.utils import make_random_cmap"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define threshold and minimum object size\n",
-    "threshold = 5. * std\n",
-    "npixels = 15\n",
-    "\n",
-    "# Create a segmentation image\n",
-    "segm = detect_sources(xdf_image.data, threshold, npixels)\n",
-    "\n",
-    "print('Found {} sources'.format(segm.max_label))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up the figure with subplots\n",
-    "fig, [ax1, ax2] = plt.subplots(1, 2, figsize=(12, 6))\n",
-    "plt.tight_layout()\n",
-    "\n",
-    "# Plot the original data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
-    "                      norm=norm_image, cmap=cmap)\n",
-    "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('Original Data')\n",
-    "\n",
-    "# Plot the segmentation image\n",
-    "rand_cmap = make_random_cmap(seed=12345)\n",
-    "rand_cmap.set_under('black')\n",
-    "segplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, segm), vmin=1, cmap=rand_cmap)\n",
-    "ax2.set_xlabel('X (pixels)')\n",
-    "ax2.set_title('Segmentation Map')\n",
-    "\n",
-    "# Define the colorbar\n",
-    "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
-    "cbar = plt.colorbar(segplot, cbar_ax)\n",
-    "cbar.set_label('Object Label', rotation=270, labelpad=30)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Compare the sources in original data to those in the segmentation image. Each color in the segmentation map denotes a separate source.\n",
-    "\n",
-    "You can easily see that larger galaxies are shown in the segmentation map as contiguous objects of the same color - for example, the two yellow and pink galaxies near (1200, 2500). Each pixel containing light from the same galaxy has been labeled as belonging to the same object."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "For a closer look, let's see what the sources we found with `find_peaks` look like in this segmentation map:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(3,3, figsize=(3, 3))\n",
-    "plt.subplots_adjust(wspace=0.1, hspace=0.1)\n",
-    "\n",
-    "cutout_size = 20\n",
-    "\n",
-    "srcs = np.random.permutation(sources_findpeaks)[:axs.size]\n",
-    "for ax, src in zip(axs.ravel(), srcs):\n",
-    "    slc = (slice(int(src['y_peak'] - cutout_size), int(src['y_peak'] + cutout_size)),\n",
-    "           slice(int(src['x_peak'] - cutout_size), int(src['x_peak'] + cutout_size)))\n",
-    "    ax.imshow(segm.data[slc], cmap=rand_cmap, vmin=1, vmax=len(sources_findpeaks))\n",
-    "    src_id = np.where((sources_findpeaks['x_peak'] == src['x_peak']) &\n",
-    "                      (sources_findpeaks['y_peak'] == src['y_peak']))[0][0]\n",
-    "    ax.text(2, 2, str(src_id), color='w', va='top')\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "\n",
-    "<h3>Exercises:</h3><br>\n",
-    "\n",
-    "Recompute the <code>SegmentationImage</code>, but alter the threshold and the minimum number of pixels in a source. How does changing the threshold affect the results? What about changing the number of pixels?\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Analyzing `source_properties`\n",
-    "\n",
-    "Once we have a `SegmentationImage` object, `photutils` provides many powerful tools to manipulate and analyze the identified objects. \n",
-    "\n",
-    "Individual objects within the segmentation map can be altered using methods such as `relabel` to change the labels of objects, `remove_labels` to remove objects, or `deblend_sources` to separating overlapping sources that were incorrectly labeled as one source.\n",
-    "\n",
-    "However, perhaps the most powerful aspect of the `SegmentationImage` is the ability to create a catalog using `source_properties` to measure the centroids, photometry, and morphology of the detected objects:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from photutils import source_properties"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "catalog = source_properties(xdf_image.data, segm)\n",
-    "table = catalog.to_table()\n",
-    "print(table)\n",
-    "print(table.colnames)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Creating apertures from segmentation data\n",
-    "\n",
-    "We can use this information to create isophotal ellipses for each identified source. These ellipses can also later be used as photometric apertures!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from photutils import EllipticalAperture"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Define the approximate isophotal extent\n",
-    "r = 4.  # pixels\n",
-    "\n",
-    "# Create the apertures\n",
-    "apertures = []\n",
-    "for obj in catalog:\n",
-    "    position = (obj.xcentroid.value, obj.ycentroid.value)\n",
-    "    a = obj.semimajor_axis_sigma.value * r\n",
-    "    b = obj.semiminor_axis_sigma.value * r\n",
-    "    theta = obj.orientation.value\n",
-    "    apertures.append(EllipticalAperture(position, a, b, theta=theta))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Set up the figure with subplots\n",
-    "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
-    "\n",
-    "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
-    "                      norm=norm_image, cmap=cmap)\n",
-    "\n",
-    "# Plot the apertures\n",
-    "for aperture in apertures:\n",
-    "    aperture.plot(color='red', lw=1, alpha=0.7, axes=ax1)\n",
-    "\n",
-    "# Define the colorbar\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
-    "\n",
-    "# Define labels\n",
-    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
-    "               rotation=270, labelpad=30)\n",
-    "ax1.set_xlabel('X (pixels)')\n",
-    "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('Segmentation Image Apertures')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-info\">\n",
-    "\n",
-    "<h3>Exercises:</h3><br>\n",
-    "\n",
-    "Play with the isophotal extent of the elliptical apertures (defined above as <code>r</code>). Observe how changing this value affects the apertures that are created.\n",
-    "\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It is clear that using `photutils` for image segmentation can allow users to generate highly customized apertures &ndash; great for complex data that contain many different kinds of celestial sources."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Conclusions\n",
-    "\n",
-    "The `photutils` package provides users with a variety of methods for detecting sources in their data, from familar algorithms such as `DAOFind` and `starfind`, to more complex and customizable image segmentation algorithms. These methods allow for easy creation of a diverse array of apertures that can be used for photometric analysis.\n",
-    "\n",
-    "**To continue with this `photutils` tutorial, go on to the [aperture photometry](../03_aperture_photometry/03_aperture_photometry.ipynb) or [PSF photometry notebook](../04_psf_photometry/04_psf_photometry.ipynb).**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## Additional Resources\n",
-    "For more examples and details, please visit the [photutils](http://photutils.readthedocs.io/en/stable/index.html) documentation."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---\n",
-    "## About this Notebook\n",
-    "**Authors:** Lauren Chambers (lchambers@stsci.edu), Erik Tollerud (etollerud@stsci.edu), Tom Wilson (towilson@stsci.edu)\n",
-    "<br>**Updated:** May 2019"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "[Top of Page](#title_ID)\n",
-    "<img style=\"float: right;\" src=\"https://raw.githubusercontent.com/spacetelescope/notebooks/master/assets/stsci_pri_combo_mark_horizonal_white_bkgd.png\" alt=\"STScI logo\" width=\"200px\"/>"
    ]
   }
  ],
