Change detail plot in XDF source detection

--- a/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
+++ b/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Source Detection with `photutils`"
+    "# Detecting sources in the XDF"
    ]
   },
   {
@@ -159,6 +159,7 @@
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
+    "ax1.grid()\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)');"
    ]
@@ -234,7 +235,7 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "ax1.scatter(sources_dao['xcentroid'], sources_dao['ycentroid'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
@@ -274,10 +275,51 @@
     "for ax, src in zip(axs.ravel(), srcs):\n",
     "    slc = (slice(int(src['ycentroid'] - cutout_size), int(src['ycentroid'] + cutout_size)),\n",
     "           slice(int(src['xcentroid'] - cutout_size), int(src['xcentroid'] + cutout_size)))\n",
-    "    ax.imshow(xdf_image_clipped[slc], norm=norm_image)\n",
+    "    ax.imshow(xdf_image[slc], norm=norm_image)\n",
     "    ax.text(2, 2, str(src['id']), color='w', va='top')\n",
     "    ax.set_xticks([])\n",
     "    ax.set_yticks([])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "https://matplotlib.org/stable/gallery/subplots_axes_and_figures/zoom_inset_axes.html#sphx-glr-gallery-subplots-axes-and-figures-zoom-inset-axes-py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "top = 1125\n",
+    "left = 2350\n",
+    "size = 500\n",
+    "\n",
+    "ax.imshow(xdf_image, cmap=cmap, norm=norm_image, alpha=0.5)\n",
+    "ax.scatter(sources_dao['xcentroid'], sources_dao['ycentroid'], s=30, marker='o',\n",
+    "           lw=1, alpha=0.5, facecolor='None', edgecolor='r')\n",
+    "\n",
+    "ax2 = ax.inset_axes([top, left, 5 * size, 5 * size], transform=ax.transData)\n",
+    "ax.indicate_inset_zoom(ax2)\n",
+    "snippet = xdf_image[top:top + size, left:left + size]\n",
+    "ax2.imshow(snippet, cmap=cmap, norm=norm_image)\n",
+    "\n",
+    "in_region = (\n",
+    "    (left < sources_dao['xcentroid']) &\n",
+    "    (sources_dao['xcentroid'] < (left + size)) & \n",
+    "    (top < sources_dao['ycentroid']) &\n",
+    "    (sources_dao['ycentroid'] < (top + size))\n",
+    ")\n",
+    "sources_dao_to_plot = sources_dao[in_region]\n",
+    "plt.scatter(sources_dao_to_plot['xcentroid'] - left, sources_dao_to_plot['ycentroid'] - top, s=30, marker='o',\n",
+    "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
+    "ax1.set_xlabel('X (pixels)')\n",
+    "ax1.set_ylabel('Y (pixels)')\n",
+    "ax1.set_title('DAOFind Sources')"
    ]
   },
   {
