--- a/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
+++ b/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
@@ -50,7 +50,9 @@
     "import matplotlib.pyplot as plt\n",
     "from matplotlib.ticker import LogLocator\n",
     "import numpy as np\n",
+    "\n",
     "from photutils.background import Background2D, MeanBackground\n",
+    "from photutils.detection import DAOStarFinder, IRAFStarFinder\n",
     "\n",
     "# Show plots in the notebook\n",
     "%matplotlib inline"
@@ -211,15 +213,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import DAOStarFinder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "daofind = DAOStarFinder(fwhm=5.0, threshold=20. * std)\n",
     "sources_dao = daofind(np.ma.masked_where(xdf_image.mask, xdf_image))\n",
     "print(sources_dao)"
@@ -240,10 +233,11 @@
     "ax1.scatter(sources_dao['xcentroid'], sources_dao['ycentroid'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
     "\n",
-    "# Define the colorbar and fix the labels\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "# Define the colorbar\n",
+    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "# format the colorbar\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
@@ -257,35 +251,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's randomly pull out some of these sources to get a closer look at them."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "fig, axs = plt.subplots(3,3, figsize=(3, 3))\n",
-    "plt.subplots_adjust(wspace=0.1, hspace=0.1)\n",
-    "\n",
-    "cutout_size = 20\n",
-    "\n",
-    "srcs = np.random.permutation(sources_dao)[:axs.size]\n",
-    "for ax, src in zip(axs.ravel(), srcs):\n",
-    "    slc = (slice(int(src['ycentroid'] - cutout_size), int(src['ycentroid'] + cutout_size)),\n",
-    "           slice(int(src['xcentroid'] - cutout_size), int(src['xcentroid'] + cutout_size)))\n",
-    "    ax.imshow(xdf_image[slc], norm=norm_image)\n",
-    "    ax.text(2, 2, str(src['id']), color='w', va='top')\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "https://matplotlib.org/stable/gallery/subplots_axes_and_figures/zoom_inset_axes.html#sphx-glr-gallery-subplots-axes-and-figures-zoom-inset-axes-py"
+    "Looking at a cutout around the relatively large galaxy in the top center of the image is instructive. As you can see below, the large galaxy is identified by [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) as several overlapping sources. Some of the smaller galaxies in the image are identified as sources, but manye are not. The parameters could be tuned to detect more of the sources, but it turns out there are source detection methods better suited to extended sources that will be discussed in [XX BROKEN LINK XX]()."
    ]
   },
   {
@@ -297,29 +263,33 @@
     "fig, ax = plt.subplots(figsize=(8, 8))\n",
     "top = 1125\n",
     "left = 2350\n",
-    "size = 500\n",
+    "cutout_size = 500\n",
+    "inset_display_size = 5 * cutout_size\n",
     "\n",
-    "ax.imshow(xdf_image, cmap=cmap, norm=norm_image, alpha=0.5)\n",
+    "fitsplot = ax.imshow(xdf_image, cmap=cmap, norm=norm_image, alpha=0.4)\n",
     "ax.scatter(sources_dao['xcentroid'], sources_dao['ycentroid'], s=30, marker='o',\n",
-    "           lw=1, alpha=0.5, facecolor='None', edgecolor='r')\n",
+    "           lw=1, alpha=0.1, facecolor='None', edgecolor='r')\n",
     "\n",
-    "ax2 = ax.inset_axes([top, left, 5 * size, 5 * size], transform=ax.transData)\n",
-    "ax.indicate_inset_zoom(ax2)\n",
-    "snippet = xdf_image[top:top + size, left:left + size]\n",
-    "ax2.imshow(snippet, cmap=cmap, norm=norm_image)\n",
+    "ax.set_xlabel('X (pixels)')\n",
+    "ax.set_ylabel('Y (pixels)')\n",
+    "ax.set_title('DAOFind Sources')\n",
+    "\n",
+    "ax2 = ax.inset_axes([2600 - inset_display_size // 2, 2300, inset_display_size, inset_display_size], \n",
+    "                    xlim=(left, left + cutout_size), ylim=(top, top + cutout_size),\n",
+    "                    transform=ax.transData)\n",
+    "ax.indicate_inset_zoom(ax2, edgecolor=\"black\")\n",
+    "\n",
+    "ax2.imshow(xdf_image, cmap=cmap, norm=norm_image)\n",
     "\n",
     "in_region = (\n",
     "    (left < sources_dao['xcentroid']) &\n",
-    "    (sources_dao['xcentroid'] < (left + size)) & \n",
+    "    (sources_dao['xcentroid'] < (left + cutout_size)) & \n",
     "    (top < sources_dao['ycentroid']) &\n",
-    "    (sources_dao['ycentroid'] < (top + size))\n",
+    "    (sources_dao['ycentroid'] < (top + cutout_size))\n",
     ")\n",
     "sources_dao_to_plot = sources_dao[in_region]\n",
-    "plt.scatter(sources_dao_to_plot['xcentroid'] - left, sources_dao_to_plot['ycentroid'] - top, s=30, marker='o',\n",
-    "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
-    "ax1.set_xlabel('X (pixels)')\n",
-    "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('DAOFind Sources')"
+    "ax2.scatter(sources_dao_to_plot['xcentroid'], sources_dao_to_plot['ycentroid'], s=30, marker='o',\n",
+    "            lw=1, alpha=0.7, facecolor='None', edgecolor='r');\n"
    ]
   },
   {
@@ -348,15 +318,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from photutils import IRAFStarFinder"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "iraffind = IRAFStarFinder(fwhm=5.0, threshold=20. * std)\n",
     "sources_iraf = iraffind(np.ma.masked_where(xdf_image.mask, xdf_image))\n",
     "print(sources_iraf)"
@@ -372,29 +333,32 @@
     "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
     "\n",
     "# Plot the data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "ax1.scatter(sources_iraf['xcentroid'], sources_iraf['ycentroid'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
     "\n",
-    "# Define the colorbar and fix the labels\n",
-    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "# Define the colorbar\n",
+    "cbar = plt.colorbar(fitsplot, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "# format the colorbar\n",
+    "format_colorbar(cbar)\n",
     "\n",
     "# Define labels\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('IRAFFind Sources')"
+    "ax1.set_title('IRAFFind Sources');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Again, let's randomly select some sources for a closer look:"
+    "Looking at a cutout around the relatively large galaxy in the top center of the image is again instructive and gives a hint as to some of the differences between [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) and [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder). \n",
+    "\n",
+    "There are several differences. The large galaxy is now identified as a single source, but many fewer sources are detected overall. The sources aside from the large galaxy that are detected are ones that are point-like."
    ]
   },
   {
@@ -403,35 +367,52 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(3,3, figsize=(3, 3))\n",
-    "plt.subplots_adjust(wspace=0.1, hspace=0.1)\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "top = 1125\n",
+    "left = 2350\n",
+    "cutout_size = 500\n",
+    "inset_display_size = 5 * cutout_size\n",
     "\n",
-    "cutout_size = 20\n",
+    "fitsplot = ax.imshow(xdf_image, cmap=cmap, norm=norm_image, alpha=0.4)\n",
+    "ax.scatter(sources_iraf['xcentroid'], sources_iraf['ycentroid'], s=30, marker='o',\n",
+    "           lw=1, alpha=0.1, facecolor='None', edgecolor='r')\n",
     "\n",
-    "srcs = np.random.permutation(sources_iraf)[:axs.size]\n",
-    "for ax, src in zip(axs.ravel(), srcs):\n",
-    "    slc = (slice(int(src['ycentroid'] - cutout_size), int(src['ycentroid'] + cutout_size)),\n",
-    "           slice(int(src['xcentroid'] - cutout_size), int(src['xcentroid'] + cutout_size)))\n",
-    "    ax.imshow(xdf_image_clipped[slc], norm=norm_image)\n",
-    "    ax.text(2, 2, str(src['id']), color='w', va='top')\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])"
+    "ax.set_xlabel('X (pixels)')\n",
+    "ax.set_ylabel('Y (pixels)')\n",
+    "ax.set_title('IRAF Starfind Sources')\n",
+    "\n",
+    "ax2 = ax.inset_axes([2600 - inset_display_size // 2, 2300, inset_display_size, inset_display_size], \n",
+    "                    xlim=(left, left + cutout_size), ylim=(top, top + cutout_size),\n",
+    "                    transform=ax.transData)\n",
+    "ax.indicate_inset_zoom(ax2, edgecolor=\"black\")\n",
+    "\n",
+    "ax2.imshow(xdf_image, cmap=cmap, norm=norm_image)\n",
+    "\n",
+    "in_region = (\n",
+    "    (left < sources_iraf['xcentroid']) &\n",
+    "    (sources_iraf['xcentroid'] < (left + cutout_size)) & \n",
+    "    (top < sources_iraf['ycentroid']) &\n",
+    "    (sources_iraf['ycentroid'] < (top + cutout_size))\n",
+    ")\n",
+    "sources_iraf_to_plot = sources_iraf[in_region]\n",
+    "ax2.scatter(sources_iraf_to_plot['xcentroid'], sources_iraf_to_plot['ycentroid'], s=30, marker='o',\n",
+    "            lw=1, alpha=0.7, facecolor='None', edgecolor='r');\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Note: Comparing `DAOStarFinder` and `IRAFStarFinder`"
+    "## Comparing `DAOStarFinder` and `IRAFStarFinder`"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You might have noticed that the `IRAFStarFinder` algorithm only found 211 sources in our data &ndash; 14% of what `DAOStarFinder` found. Why is this?\n",
+    "You might have noticed that the [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder) algorithm only found 211 sources in our data &ndash; 14% of what [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) found. Why is this?\n",
     "\n",
-    "The answer comes down to the default settings for the two algorithms: (1) there are differences in the upper and lower bounds on the requirements for source roundness and sharpness, and (2) `IRAFStarFinder` includes a minimum separation between sources that `DAOStarFinder` does not have:\n",
+    "The answer comes down to the default settings for the two algorithms: (1) there are differences in the upper and lower bounds on the requirements for source roundness and sharpness, and (2) [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder) includes a minimum separation between sources that [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) does not have:\n",
     "\n",
     "|  &nbsp;        | `IRAFStarFinder`   | `DAOStarFinder`   |\n",
     "|----------------|-------|------|\n",
@@ -441,7 +422,7 @@
     "|   roundhi      | 0.2   |   1.0 |\n",
     "|   minsep_fwhm  | 1.5 * FWHM   |   N/A |\n",
     "\n",
-    "Thinking about this, *it then makes sense* that `IRAFStarFinder` would find fewer sources. It has tighter restrictions on source roundness and ``sharplo``, meaning that it eliminates  more elliptical galactic sources (this is the eXtreme Deep Field, after all!), and the minimum separation requirement further rules out sources that are too close to one another.\n",
+    "Thinking about this, *it then makes sense* that [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder) would find fewer sources. It has tighter restrictions on source roundness and ``sharplo``, meaning that it eliminates  more elliptical galactic sources (this is the eXtreme Deep Field, after all!), and the minimum separation requirement further rules out sources that are too close to one another.\n",
     "\n",
     "If we set all these parameters to be equivalent, though, we should find much better agreement between the two methods:"
    ]
@@ -478,7 +459,7 @@
     "plt.tight_layout()\n",
     "\n",
     "# Plot the DAOStarFinder data\n",
-    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "ax1.scatter(sources_dao['xcentroid'], sources_dao['ycentroid'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
@@ -487,7 +468,7 @@
     "ax1.set_title('DAOStarFinder Sources')\n",
     "\n",
     "# Plot the IRAFStarFinder data\n",
-    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image_clipped),\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
     "                      norm=norm_image, cmap=cmap)\n",
     "ax2.scatter(sources_iraf_match['xcentroid'], sources_iraf_match['ycentroid'],\n",
     "            s=30, marker='o', lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
@@ -496,25 +477,75 @@
     "\n",
     "# Define the colorbar\n",
     "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
-    "cbar = plt.colorbar(fitsplot, cbar_ax, ticks=LogLocator(subs=range(10)))\n",
-    "labels = ['$10^{-4}$'] + [''] * 8 + ['$10^{-3}$'] + [''] * 8 + ['$10^{-2}$']\n",
-    "cbar.ax.set_yticklabels(labels)\n",
+    "cbar = plt.colorbar(fitsplot, cbar_ax, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "\n",
+    "# format the colorbar\n",
+    "format_colorbar(cbar)\n",
+    "\n",
     "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
-    "               rotation=270, labelpad=30)"
+    "               rotation=270, labelpad=30);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Take this example as reminder to be mindful when selecting a source detection algorithm, and when defining algorithm parameters! Don't be afraid to play around with the parameters and investigate how that affects your results."
+    "Take this example as reminder to be mindful when selecting a source detection algorithm, and when defining algorithm parameters! Don't be afraid to play around with the parameters and investigate how that affects your results.\n",
+    "\n",
+    "The detailed view near the large galaxy confirms that the results are now nearly identical."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Set up the figure with subplots\n",
+    "fig, [ax1, ax2] = plt.subplots(1, 2, figsize=(12, 6))\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# Plot the DAOStarFinder data\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
+    "                      norm=norm_image, cmap=cmap)\n",
+    "ax1.scatter(sources_dao['xcentroid'], sources_dao['ycentroid'], s=30, marker='o',\n",
+    "            lw=1, alpha=1, facecolor='None', edgecolor='r')\n",
+    "ax1.set_xlabel('X (pixels)')\n",
+    "ax1.set_ylabel('Y (pixels)')\n",
+    "ax1.set_title('DAOStarFinder Sources')\n",
+    "ax1.set_xlim(left, left + cutout_size)\n",
+    "ax1.set_ylim(top, top + cutout_size)\n",
+    "\n",
+    "# Plot the IRAFStarFinder data\n",
+    "fitsplot = ax2.imshow(np.ma.masked_where(xdf_image.mask, xdf_image),\n",
+    "                      norm=norm_image, cmap=cmap)\n",
+    "ax2.scatter(sources_iraf_match['xcentroid'], sources_iraf_match['ycentroid'],\n",
+    "            s=30, marker='o', lw=1, alpha=1, facecolor='None', edgecolor='r')\n",
+    "ax2.set_xlabel('X (pixels)')\n",
+    "ax2.set_title('IRAFStarFinder Sources')\n",
+    "ax2.set_xlim(left, left + cutout_size)\n",
+    "ax2.set_ylim(top, top + cutout_size)\n",
+    "\n",
+    "# Define the colorbar\n",
+    "cbar_ax = fig.add_axes([1, 0.09, 0.03, 0.87])\n",
+    "cbar = plt.colorbar(fitsplot, cbar_ax, fraction=0.046, pad=0.04, ticks=LogLocator())\n",
+    "fig.suptitle(\"Cutout near large galaxy\", fontsize=20, y=1.1)\n",
+    "# format the colorbar\n",
+    "format_colorbar(cbar)\n",
+    "\n",
+    "cbar.set_label(r'Flux Count Rate ({})'.format(xdf_image.unit.to_string('latex')),\n",
+    "               rotation=270, labelpad=30);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ADD COMPARISON PLOT BACK INTO THIS"
+    "## Summary\n",
+    "\n",
+    "Both [`DAOStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.DAOStarFinder.html#photutils.detection.DAOStarFinder) and [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder) are capable of producing similar results if the input parameters are matched. One noticable difference between them is that [`IRAFStarFinder`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.IRAFStarFinder.html#photutils.detection.IRAFStarFinder) includes a parameter for setting a minimum separation of sources. This is particularly useful to exclude overlapping sources if the intent is to perform aperture photometry.\n",
+    "\n",
+    "In the section [XX BROKEN LINK XX]() the detection methods discussed here will be compared with local peak detection, which performs better on extended sources. Section [XX BROKEN LINK  SEGMENTATIONXX]() will demonstrate using image segmentation to detect sources. That also performs better on extended sources than the star finders described in this notebook."
    ]
   }
  ],
@@ -534,7 +565,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
