Rework find_peaks/XDF to include image zoom

--- a/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
+++ b/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
@@ -26,10 +26,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from astropy.io import fits\n",
-    "import astropy.units as u\n",
+    "import warnings\n",
+    "\n",
     "from astropy.nddata import CCDData\n",
     "from astropy.stats import sigma_clipped_stats, SigmaClip\n",
+    "import astropy.units as u\n",
     "from astropy.visualization import ImageNormalize, LogStretch\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -92,6 +93,8 @@
     "\n",
     "This algorithm is particularly useful for identifying non-stellar sources or heavily distorted sources in image data.\n",
     "\n",
+    "The centroid-finding, which we do here only so that we can compare positions to the other found by this method to positions found by the star-finding methods, can generate many warnings when an attempt is made to fit a 2D Gaussian to the sources. The warnings are suppressed below to avoid cluttering the output.\n",
+    "\n",
     "Let's see how it does:"
    ]
   },
@@ -101,9 +104,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sources_findpeaks = find_peaks(xdf_image.data, mask=xdf_image.mask,\n",
-    "                               threshold=20. * std, box_size=29,\n",
-    "                               centroid_func=centroid_2dg)\n",
+    "with warnings.catch_warnings(action=\"ignore\"):\n",
+    "    sources_findpeaks = find_peaks(xdf_image.data - median, mask=xdf_image.mask,\n",
+    "                                   threshold=20. * std, box_size=29,\n",
+    "                                   centroid_func=centroid_2dg)\n",
     "print(sources_findpeaks)"
    ]
   },
@@ -145,14 +149,14 @@
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('find_peaks Sources')"
+    "ax1.set_title('find_peaks Sources');"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "And a closer look:"
+    "We once again look at region around the large galaxy. Several sources are detected, more than were found in either of the methods tuned for star finding that were discussed in [XX BROKEN LINK IRAF-LIKE XDF](). A comparison of the three aproaches is later in this section."
    ]
   },
   {
@@ -161,21 +165,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fig, axs = plt.subplots(3,3, figsize=(3, 3))\n",
-    "plt.subplots_adjust(wspace=0.1, hspace=0.1)\n",
+    "fig, ax = plt.subplots(figsize=(8, 8))\n",
+    "top = 1125\n",
+    "left = 2350\n",
+    "cutout_size = 500\n",
+    "inset_display_size = 5 * cutout_size\n",
     "\n",
-    "cutout_size = 20\n",
+    "fitsplot = ax.imshow(xdf_image, cmap=cmap, norm=norm_image, alpha=0.4)\n",
+    "ax.scatter(sources_findpeaks['x_peak'], sources_findpeaks['y_peak'], s=30, marker='o',\n",
+    "           lw=1, alpha=0.1, facecolor='None', edgecolor='r')\n",
     "\n",
-    "srcs = np.random.permutation(sources_findpeaks)[:axs.size]\n",
-    "for ax, src in zip(axs.ravel(), srcs):\n",
-    "    slc = (slice(int(src['y_peak'] - cutout_size), int(src['y_peak'] + cutout_size)),\n",
-    "           slice(int(src['x_peak'] - cutout_size), int(src['x_peak'] + cutout_size)))\n",
-    "    ax.imshow(xdf_image[slc], norm=norm_image)\n",
-    "    src_id = np.where((sources_findpeaks['x_peak'] == src['x_peak']) &\n",
-    "                      (sources_findpeaks['y_peak'] == src['y_peak']))[0][0]\n",
-    "    ax.text(2, 2, str(src_id), color='w', va='top')\n",
-    "    ax.set_xticks([])\n",
-    "    ax.set_yticks([])"
+    "ax.set_xlabel('X (pixels)')\n",
+    "ax.set_ylabel('Y (pixels)')\n",
+    "ax.set_title('Peak Finding Sourceas')\n",
+    "\n",
+    "ax2 = ax.inset_axes([2600 - inset_display_size // 2, 2300, inset_display_size, inset_display_size], \n",
+    "                    xlim=(left, left + cutout_size), ylim=(top, top + cutout_size),\n",
+    "                    transform=ax.transData)\n",
+    "ax.indicate_inset_zoom(ax2, edgecolor=\"black\")\n",
+    "\n",
+    "ax2.imshow(xdf_image, cmap=cmap, norm=norm_image)\n",
+    "\n",
+    "in_region = (\n",
+    "    (left < sources_findpeaks['x_peak']) &\n",
+    "    (sources_findpeaks['x_peak'] < (left + cutout_size)) & \n",
+    "    (top < sources_findpeaks['y_peak']) &\n",
+    "    (sources_findpeaks['y_peak'] < (top + cutout_size))\n",
+    ")\n",
+    "sources_findpeaks_to_plot = sources_findpeaks[in_region]\n",
+    "ax2.scatter(sources_findpeaks_to_plot['x_peak'], sources_findpeaks_to_plot['y_peak'], s=30, marker='o',\n",
+    "            lw=1, alpha=0.7, facecolor='None', edgecolor='r');\n"
    ]
   },
   {
@@ -211,9 +230,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print('''DAOStarFinder: {} sources\n",
-    "IRAFStarFinder: {} sources\n",
-    "find_peaks: {} sources'''.format(len(sources_dao), len(sources_iraf_match), len(sources_findpeaks)))"
+    "print(f'''DAOStarFinder: {len(sources_dao)} sources\n",
+    "IRAFStarFinder: {len(sources_iraf_match)} sources\n",
+    "find_peaks: {len(sources_findpeaks)} sources''') "
    ]
   },
   {
@@ -247,13 +266,11 @@
     "dao_findpeaks_match = rounded_centroids_dao.intersection(rounded_centroids_findpeaks)\n",
     "iraf_findpeaks_match = rounded_centroids_iraf.intersection(rounded_centroids_findpeaks)\n",
     "\n",
-    "print('''Matching sources found by:\n",
-    "    All methods: {}\n",
-    "    DAOStarFinder & IRAFStarFinder: {}\n",
-    "    DAOStarFinder & find_peaks: {}\n",
-    "    IRAFStarFinder & find_peaks: {}'''\n",
-    "      .format(len(all_match), len(dao_iraf_match),\n",
-    "              len(dao_findpeaks_match), len(iraf_findpeaks_match)))"
+    "print(f'''Matching sources found by:\n",
+    "    All methods: {len(all_match)}\n",
+    "    DAOStarFinder & IRAFStarFinder: {len(dao_iraf_match)}\n",
+    "    DAOStarFinder & find_peaks: {len(dao_findpeaks_match)}\n",
+    "    IRAFStarFinder & find_peaks: {len(iraf_findpeaks_match)}''')"
    ]
   },
   {
@@ -297,6 +314,41 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax1 = plt.subplots(1, 1, figsize=(8, 8))\n",
+    "\n",
+    "# Plot the data\n",
+    "fitsplot = ax1.imshow(np.ma.masked_where(xdf_image.mask, xdf_image), norm=norm_image, alpha=0.9)\n",
+    "\n",
+    "marker_size = 60\n",
+    "ax1.scatter(sources_findpeaks['x_peak'], sources_findpeaks['y_peak'], s=marker_size, marker='s',\n",
+    "            lw=1, alpha=1, facecolor='None', edgecolor='r', label='Found by find_peaks')\n",
+    "ax1.scatter(sources_dao['xcentroid'], sources_dao['ycentroid'], s=2 * marker_size, marker='D',\n",
+    "            lw=1, alpha=1, facecolor='None', edgecolor='#EE7733', label='Found by DAOfind')\n",
+    "ax1.scatter(sources_iraf_match['xcentroid'], sources_iraf_match['ycentroid'],\n",
+    "            s=4 * marker_size, marker='o', lw=1, alpha=1, facecolor='None', edgecolor='#BBBBBB',\n",
+    "            label=\"Found by IRAF starfind\")\n",
+    "\n",
+    "# Add legend\n",
+    "ax1.legend(ncol=2, loc='lower center', bbox_to_anchor=(0.5, -0.25))\n",
+    "\n",
+    "top = 1125\n",
+    "left = 2350\n",
+    "cutout_size = 500\n",
+    "\n",
+    "ax1.set_xlim(left, left + cutout_size)\n",
+    "ax1.set_ylim(top, top + cutout_size)\n",
+    "# Define labels\n",
+    "ax1.set_xlabel('X (pixels)')\n",
+    "ax1.set_ylabel('Y (pixels)')\n",
+    "ax1.set_title('Sources Found by Different Methods');"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -307,11 +359,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "There is only one actual source in this cutout that was found by one of the star-finding techniques that were not also found by peak finding. Several sources ideintified as separate by star-finding sources in the large galaxy at the center are not actually separate. Peak finding suffers from this too but to a lesser extent."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Custom Detection Algorithms\n",
     "\n",
     "If none of the algorithms we've reviewed above do exactly what you need, `photutils` also provides infrastructure for you to generate and use your own source detection algorithm: the `StarFinderBase` object can be inherited and used to develop new star-finding classes. Take a look at the [documentation](https://photutils.readthedocs.io/en/latest/api/photutils.detection.StarFinderBase.html#photutils.detection.StarFinderBase) for more information.\n",
     "\n",
-    "If you do go that route, remember that `photutils` is open-developed; you would be very welcome to [open a pull request](https://github.com/astropy/photutils/blob/master/CONTRIBUTING.rst) and incorporate your new star finder into the `photutils` source code &ndash; for everyone to use!"
+    "If you do go that route, remember that `photutils` is open source; you would be very welcome to [open a pull request](https://github.com/astropy/photutils/blob/master/CONTRIBUTING.rst) and incorporate your new star finder into the `photutils` source code &ndash; for everyone to use!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Summary\n",
+    "\n",
+    "The sources found by [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) are roughly the same as those found by the star-finding algorithms. In [XX BROKEN LINK SEGMENTATION]() we will look at a much different approach that is especially well suited to finding extended objects."
    ]
   }
  ],
@@ -331,7 +399,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
