Remove text output

--- a/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
+++ b/notebooks/photometry/01.02.02-IRAF-like-source-detection-XDF.ipynb
@@ -244,7 +244,7 @@
     "               rotation=270, labelpad=30)\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('DAOFind Sources')"
+    "ax1.set_title('DAOFind Sources');"
    ]
   },
   {
