--- a/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
+++ b/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
@@ -177,7 +177,7 @@
     "\n",
     "ax.set_xlabel('X (pixels)')\n",
     "ax.set_ylabel('Y (pixels)')\n",
-    "ax.set_title('Peak Finding Sourceas')\n",
+    "ax.set_title('Peak Finding Sources')\n",
     "\n",
     "ax2 = ax.inset_axes([2600 - inset_display_size // 2, 2300, inset_display_size, inset_display_size], \n",
     "                    xlim=(left, left + cutout_size), ylim=(top, top + cutout_size),\n",
@@ -310,7 +310,7 @@
     "# Define labels\n",
     "ax1.set_xlabel('X (pixels)')\n",
     "ax1.set_ylabel('Y (pixels)')\n",
-    "ax1.set_title('Sources Found by Different Methods')"
+    "ax1.set_title('Sources Found by Different Methods');"
    ]
   },
   {
