Add some links to photutils docs

--- a/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
+++ b/notebooks/photometry/01.03.02-peak_detection-XDF.ipynb
@@ -80,20 +80,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Source Detection with `find_peaks`"
+    "## Source Detection with peak finding"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For more general source detection cases that do not require comparison with models, `photutils` offers the `find_peaks` function. \n",
+    "For more general source detection cases that do not require comparison with models, `photutils` offers the [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) function. \n",
     "\n",
-    "This function simply finds sources by identifying local maxima above a given threshold and separated by a given distance, rather than trying to fit data to a given model. Unlike the previous detection algorithms, `find_peaks` does not necessarily calculate objects' centroids. Unless the `centroid_func` argument is passed a function like `photutils.centroids.centroid_2dg` that can handle source position centroiding, `find_peaks` will return just the integer value of the peak pixel for each source.\n",
+    "This function simply finds sources by identifying local maxima above a given threshold and separated by a given distance, rather than trying to fit data to a given model. Unlike the previous detection algorithms, [`find_peaks`](https://photutils.readthedocs.io/en/stable/api/photutils.detection.find_peaks.html#photutils.detection.find_peaks) does not necessarily calculate objects' centroids. Unless the `centroid_func` argument is passed a function like `photutils.centroids.centroid_2dg` that can handle source position centroiding, `find_peaks` will return just the integer value of the peak pixel for each source.\n",
     "\n",
     "This algorithm is particularly useful for identifying non-stellar sources or heavily distorted sources in image data.\n",
     "\n",
-    "The centroid-finding, which we do here only so that we can compare positions to the other found by this method to positions found by the star-finding methods, can generate many warnings when an attempt is made to fit a 2D Gaussian to the sources. The warnings are suppressed below to avoid cluttering the output.\n",
+    "The centroid-finding, which we do here only so that we can compare positions found by this method to positions found by the star-finding methods, can generate many warnings when an attempt is made to fit a 2D Gaussian to the sources. The warnings are suppressed below to avoid cluttering the output.\n",
     "\n",
     "Let's see how it does:"
    ]
