Add useful header

--- a/notebooks/photometry/01.03.03-peak_detection-Feder.ipynb
+++ b/notebooks/photometry/01.03.03-peak_detection-Feder.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Which data are used in this notebook?\n",
+    "## Data are used in this notebook?\n",
     "\n",
     "The image in this notebook is of the field of the star [TIC 125489084](https://exofop.ipac.caltech.edu/tess/target.php?id=125489084) on a night when the moon was nearly full. The moonlight caused a smooth gradient across the background of the image.\n",
     "\n",
@@ -132,6 +132,13 @@
     "ax1.scatter(sources_findpeaks['x_peak'], sources_findpeaks['y_peak'], s=30, marker='o',\n",
     "            lw=1, alpha=0.7, facecolor='None', edgecolor='r')\n",
     "ax1.set_title(\"find_peaks, no masking\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Mask bad regions of the CCCD"
    ]
   },
   {
@@ -276,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
